<resources>
    <array name="produtos">
        <item>Camisetas</item>
        <item>Moletom</item>
        <item>Tenis</item>
    </array>
    <string name="app_name">EasyCampaign</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="entrar">Entrar</string>
    <string name="gerenciamento_inteligente_e_mais_assertivo_de_campanhas_de_marketing">Gerenciamento inteligente e mais assertivo de campanhas de marketing</string>
    <string name="bora_la">Começar?</string>
    <string name="easy_campaign">Easy Campaign</string>
    <string name="ainda_n_o_tem_uma_conta_registre_se">Ainda não tem uma conta? Registre-se!</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="j_tem_uma_conta">Já tem uma conta? Clique aqui</string>
    <string name="orcamento">Orçamento</string>
    <string name="cheque_suas_campanhas">Cheque o orçamento de suas campanhas</string>
    <string name="desempenho_da_loja">Desempenho da loja</string>
    <string name="acompanhe_o_desempenho_de_sua_loja">Acompanhe o desempenho de sua loja</string>
    <string name="campanhas_ativas">Campanhas Ativas</string>
    <string name="calendario">Calendário</string>
    <string name="estoque_atual">Estoque</string>
    <string name="texto_aqui">Texto aqui</string>
    <string name="visao_geral">Visão Geral</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="todas_as_campanhas">Todas as campanhas</string>
    <string name="_2_campanhas">2 campanhas</string>
    <string name="_1_campanha_ativa">Registre uma nova campanha</string>
    <string name="_50_do_estoque_disponivel">Verifique o estoque disponivel</string>
    <string name="agendar_campanhas">Agendar campanhas</string>

    <string name="action_settings">Settings</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="configura_o">Configuração</string>
    <string name="sair">Sair</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="adicionar_campanha">Adicionar Campanha</string>

    <string name="adicione_um_produto">Adicione um produto</string>
    <string name="adicionar_produto">Adicionar produto</string>
    <string name="descricao">Descrição</string>
    <string name="quantidade">Quantidade</string>
    <string name="datainicio">DataInicio</string>
    <string name="campanha">Campanha</string>
    <string name="produtos">Produtos</string>
    <string name="digite_um_novo_nome">Digite um novo nome</string>
    <string name="atualizar">Atualizar</string>
    <string name="nome_da_campanha">Nome da campanha</string>
    <string name="data_de_inicio">Data de inicio</string>
    <string name="produto">Produto</string>
    <string name="produto_removido">Produto removido com sucesso</string>
    <string name="campanha_removida">Campanha removida com sucesso,</string>
    <string name="produto_atualizado">Produto atualizado com sucesso.</string>
    <string name="campanha_atualizada">Campanha atualizada com sucesso</string>
    <string name="digite_uma_nova_descri_o">Digite uma nova descrição</string>
    <string name="digite_uma_nova_quantidade">Digite uma nova quantidade</string>
    <string name="verifique_suas_campanhas">Verifique suas campanhas</string>
</resources>
