<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtAttNmProduto"
        android:textAlignment="center"
        android:text="@string/produto"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtAttNmProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/digite_um_novo_nome"
        android:textColorHint="@color/cinza_rebelde"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edtAttDescProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/digite_uma_nova_descri_o"
        android:textColorHint="@color/cinza_rebelde"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edtAttQtdProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/digite_uma_nova_quantidade"
        android:textColorHint="@color/cinza_rebelde"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/btnAtualizar"
        android:text="@string/atualizar"
        android:background="@color/verdinho"
        android:textColor="@color/branco"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>