<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CadastroProdutoActivity">

    <include layout="@layout/toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/azul_claro"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="30dp"
        android:layout_width="130dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_add_produto_white_24dp"
        app:civ_border_color="@color/azul_marinho"
        app:civ_border_width="3dp"
        app:civ_circle_background_color="@color/verdinho" />

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:text="@string/adicione_um_produto" />

    <EditText
        android:id="@+id/edtNomeProduto"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="Nome do produto"/>

    <EditText
        android:id="@+id/edtDescProduto"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/descricao"/>

    <EditText
        android:id="@+id/edtQtdProduto"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/quantidade"/>

<!--    <Spinner-->
<!--        android:id="@+id/spinnerProdutos"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:background="@color/branco"-->
<!--        android:entries="@array/produtos"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <Button
        android:id="@+id/btnCadastrarProduto"
        android:layout_marginTop="20dp"
        android:background="@color/azul_marinho"
        android:textColor="@color/branco"
        android:layout_gravity="center_horizontal"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_produto" />

<!--    <ListView-->
<!--        android:id="@+id/listViewCampanha"-->
<!--        android:layout_width="match_parent"-->
<!--        android:padding="20dp"-->
<!--        android:layout_height="match_parent"/>-->

</LinearLayout>