<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CampanhaActivity">

    <include layout="@layout/toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/azul_claro"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_basket"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/azul_marinho"
        app:civ_circle_background_color="@color/pinkAccent" />

    <TextView
        android:id="@+id/txtProduto"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/produto" />


    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="@color/preto"
        android:textSize="18sp"
        android:text="@string/descricao" />

    <TextView
        android:id="@+id/txtDescProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/texto_aqui" />

    <TextView
        android:id="@+id/txtQtd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="@color/preto"
        android:textSize="18sp"
        android:text="@string/quantidade" />

    <TextView
        android:id="@+id/txtQtdProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/texto_aqui" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnAtualizarProduto"
            android:src="@drawable/ic_create_white_24dp"
            android:background="@color/verdinho"
            android:layout_marginLeft="70dp"
            android:layout_width="100dp"
            android:layout_height="40dp" />

        <ImageButton
            android:id="@+id/btnRemoverProduto"
            android:src="@drawable/ic_delete_white_24dp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="90dp"
            android:background="#F50202" />

    </LinearLayout>

    <!--    <ListView-->
    <!--        android:id="@+id/listViewCampanha"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:padding="20dp"-->
    <!--        android:layout_height="match_parent"/>-->
</LinearLayout>